# Synthesizer

./: .gitignore  CMakeLists.txt  README.md
include/: NoiseMaker.h
src/: main.cpp
